@@ -143,6 +143,7 @@ sub is_same_hd {
 	$s1 eq $s2;
     } else {
 	$hd1->{device_LABEL} && $hd2->{device_LABEL} && $hd1->{device_LABEL} eq $hd2->{device_LABEL}
+	  || $hd1->{device_UUID} && $hd2->{device_UUID} && $hd1->{device_UUID} eq $hd2->{device_UUID}
 	  || $hd1->{device} && $hd2->{device} && $hd1->{device} eq $hd2->{device};
     }
 }
