@@ -280,6 +280,7 @@ sub type_subpart_from_magic {
     my $ids = call_vol_id($part);
 
     $part->{LABEL_from_magic} = $ids->{ID_FS_LABEL} if $ids->{ID_FS_LABEL};
+    $part->{UUID_from_magic} = $ids->{ID_FS_UUID} if $ids->{ID_FS_UUID};
 
     my $p;
     if ($ids->{ID_FS_USAGE} eq 'raid') {
