@@ -1,3 +1,4 @@
+- support for UUID (including UUID=xxx in fstab)
 - do not set relatime option for mounting nfs
 - nicely adjust mtime of fontconfig cache files
 
