@@ -1,3 +1,6 @@
+- diskdrake
+  o support for UUID in filesystems (and UUID=... in fstab)
+
 Version 10.4.183 - 31 August 2007, by Pascal "Pixel" Rigaux
 
 - bootloader-config
